fix: make section container stretch to edges on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -695,4 +695,9 @@ footer p {
   #top-nav-logotype {
     display: none;
   }
+
+  .section {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
